--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.56.1",
     "socket.io-client": "^4.5.3",
     "typescript": "^4.8.4",
