--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.56.1",
